# ClipTransfer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  clip-transfer_1.0.0_amd64.snap
.github/workflows/: makefile.yml
cmake/: asio.cmake
i18n/: ClipTransfer_en.qm
include/ClipTransfer/: MainWindow.h  chat.hpp  client.hpp  server.hpp
installer/: ClipTransfer.iss  README.md  package-windows.ps1
platform/android/: AndroidManifest.xml
platform/ios/: Info.plist
res/: Main.qml  clip-transfer.desktop  mobile.qrc  resource.rc
res/i18n/: ClipTransfer_ar.ts  ClipTransfer_de.ts  ClipTransfer_en.ts  ClipTransfer_es.ts  ClipTransfer_nl.ts  ClipTransfer_pl.ts  ClipTransfer_pt.ts  ClipTransfer_zh.ts
snap/: snapcraft.yaml
src/: MainWindow.cpp  MainWindow.h  chat.cpp  client.cpp  main.cpp  server.cpp
src/gui/: window.cpp  window.h
src/mobile/: chat_controller.cpp  chat_controller.h  main.cpp
tools/: generate_android_icons.py  generate_ios_icons.py
